<resources>
    <string name="app_name">TripBook</string>

    <!--exceptions start-->
    <string name="exception_user_id_is_null">User id is null</string>
    <!--exceptions end-->

    <!--trips fragment start-->
    <string name="fragment_trips_title">TRIPS</string>
    <!--trips fragment end-->

    <!--expenses fragment start-->
    <string name="fragment_expenses_title">EXPENSES</string>
    <!--expenses fragment end-->

    <!--archive fragment start-->
    <string name="fragment_archive_title">ARCHIVED TRIPS</string>
    <!--archive fragment start-->

    <!--auto fragment start-->
    <string name="fragment_auto_title">AUTO-CLASSIFY</string>
    <!--auto fragment start-->

    <!--report fragment start-->
    <string name="fragment_report_title">REPORTS</string>
    <!--report fragment end-->

    <!--invite fragment start-->
    <string name="fragment_invite_title">INVITE FRIENDS</string>
    <!--invite fragment end-->

    <!--settings fragment start-->
    <string name="fragment_settings_title">SETTINGS</string>
    <!--settings fragment end-->

    <!--toolbar start-->
    <string name="toolbar_value">$%1$s</string>
    <string name="toolbar_default_value">0</string>
    <!--toolbar start-->

    <!--viewholder start -->
    <string name="viewholder_car_text">%1$s %2$s</string>
    <string name="viewholder_time_text">, %1$s</string>
    <string name="viewholder_destination_text">Trip to %1$s</string>
    <string name="viewholder_deduction_text">%1$s Deductible</string>
    <string name="viewholder_miles_text">%1$s Miles</string>
    <!--viewholder end-->

    <!--trips adapter start-->
    <string name="adapter_trip_snackbar_undo_personal">Trip was classified as personal</string>
    <string name="adapter_trip_snackbar_undo_business">Trip was classified as business</string>
    <string name="adapter_trip_snackbar_undo">UNDO</string>
    <!--trips adapter end-->

    <!--host activity start-->
    <string name="activity_host_snackbar_prevent_close">Press back again to close the app</string>
    <!--host activity end-->

    <!--actionbar menu start-->
    <string name="action_menu_title_sign_out">Sign Out</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="refresh">Refresh</string>
    <string name="help">Help</string>
    <!--actionbar menu end-->

    <!--cardview menu start-->
    <string name="action_menu_item_change_vehicle">Change Vehicle</string>
    <string name="action_menu_item_delete">Delete</string>
    <!--cardview menu end-->

    <!--login activity start-->
    <string name="activity_login_button_sign_up_google">Sign Up with Google</string>
    <string name="activity_login_dialog_sign_up_loading">Loading</string>
    <!--login activity end-->

    <!--detail activity start-->
    <string name="activity_help_title">Help</string>
    <!--detail activity end-->

    <!--vehicle detail activity start-->
    <string name="activity_vehicle_detail_title">Vehicle Detail</string>
    <!--vehicle detail activity end-->

    <!--profile activity start-->
    <string name="activity_profile_title">Profile</string>
    <!--profile activity end-->

    <!--search activity start-->
    <string name="activity_search_title">Search</string>
    <!--search activity end-->

    <!--navigation drawer start-->
    <string name="navigation_drawer_menu_item_trips">Trips</string>
    <string name="navigation_drawer_menu_item_expenses">Expenses</string>
    <string name="navigation_drawer_menu_item_archive">Archived Trips</string>
    <string name="navigation_drawer_menu_item_auto">Auto-Classify</string>
    <string name="navigation_drawer_menu_item_reports">Reports</string>
    <string name="navigation_drawer_menu_item_invite">Invite Friends</string>
    <string name="navigation_drawer_menu_item_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--navigation drawer end-->

    <!--intro start -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <!-- intro end -->

    <!--settings activity start-->
    <string name="activity_settings_title">Settings</string>
    <!--settings activity end-->

    <!--about activity start-->
    <string name="activity_about_title">About the app</string>
    <!--about activity end-->

    <!-- transition shared elements -->
    <string name="transition_search_back" translatable="false">transition_search_back</string>

    <!-- Needed to be able to sign in -->
    <string name="token">831541832033-guluj37mqme3qgkfsvtgg1hcplp4l8vg.apps.googleusercontent.com</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search for trips</string>
    <string name="app_label">TripBook</string>

</resources>
