<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_trips"
            android:icon="@drawable/ic_menu_trips"
            android:title="@string/navigation_drawer_menu_item_trips" />

        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_menu_expense"
            android:title="@string/navigation_drawer_menu_item_expenses" />

        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_menu_archive"
            android:title="@string/navigation_drawer_menu_item_archive" />

        <item
            android:id="@+id/nav_auto_classify"
            android:icon="@drawable/ic_menu_auto"
            android:title="@string/navigation_drawer_menu_item_auto" />

        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/navigation_drawer_menu_item_reports" />

        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_menu_invite"
            android:title="@string/navigation_drawer_menu_item_invite" />

    </group>

    <group
        android:id="@+id/group_2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/navigation_drawer_menu_item_settings" />

    </group>

</menu>
